tests/invalid/extern_fn_pass_compound_by_value.lang
module main

typedef Vec3 struct {
    e [3]float,
};

typedef SomeFunc extern func* (a Vec3);
extern func hello(a Vec3);

